--- a/index.htm
+++ b/index.htm
@@ -124,7 +124,7 @@
 		
 		<center>
 		  <div class="bkb-offer-image-with-cta-coupon">
-        <h1><strong>Dónde invertir en 2022?<br></strong></h1>
+        <h1>¿<strong>Dónde invertir en 2022?<br></strong></h1>
         <h2>¿Cuánto le durarían 500.000 € en España?</h2>
         <br>
 
