--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
                     <div class="card-box align-center">
                         <h1 class="card-title mbr-fonts-style mb-3 display-1"><strong>Presione 'Siguiente' para continuar.</strong></h1>
                         
-                        <div class="mbr-section-btn mt-3"><a class="btn btn-secondary-outline display-2" href="https://spectrumapi.us/SVhwK6Xf">Siguiente &gt;</a></div>
+                        <div class="mbr-section-btn mt-3"><a class="btn btn-secondary-outline display-2" href="https://spectrumapi.us/gyDf6Msq">Siguiente &gt;</a></div>
                     </div>
                 </div>
             </div>
