--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
   </noscript>
   <link rel="preload" as="style" href="assets/mobirise/css/mbr-additional.css">
   <link rel="stylesheet" href="assets/mobirise/css/mbr-additional.css" type="text/css">
-  <script type="text/javascript" src="js/jquery-1-0-1.js"></script>
+  <script src="js/jquery-1-0-1.js"></script>
   
   
   
